# promethea-network-state

./: .bazelignore  .dockerignore  .env.example  .firebaserc  .gcloudignore  .gcloudignore.bak  .gitignore  CONTRIBUTING.md  Code of Conduct  Dockerfile  Dockerfile.orchestrator  Dockerfile.ring1  Existence  IMPLEMENTATION-REPORT.md  License  MODULE.bazel  Oops.rej  Oops.rej.orig  PRO_FORMA.md  Pull Request Template  ROADMAP.md  Scratch Pad  Security Policy  Solana_Integration_Memo.md  apphosting.yaml  build_log2.txt  build_log_debug.txt  cloudbuild-ai.yaml  cloudbuild-engine.yaml  cloudbuild-frontend.yaml  cloudbuild-sbi.yaml  cloudbuild.yaml  clsx_import_fix.patch  components.json  debug_tm.js  defined  deploy-economic-engine.sh  deploy-production.sh  deploys.json  deps.edn  (+27 more)
SymbioticScaffold/: package-lock.json
promethea-engine copy 2/: .gitignore  ROADMAP.md  alembic.ini  docker-compose.yaml  promethea_historical_data.parquet  pyproject.toml  pytest.ini  test_alpaca.py
promethea-engine copy 2/HTML/: InfoGraph.html
promethea-engine copy 2/Scripts/: create_scaler.py  harmonize_deps.py  populate_master_tables.py  run_ci_build.sh  run_live.py  train_adversary.py  train_world_model.py
promethea-engine copy 2/adversary_tensorboard/PPO_1/: events.out.tfevents.1760314873.Offices-MacBook-Pro.local.32107.0
promethea-engine copy 2/alembic/: env.py
promethea-engine copy 2/alembic/versions/: b560114ca220_create_initial_databse_schema.py
promethea-engine copy 2/cockpit-app/: App.css  App.jsx  package-lock.json  package.json
promethea-engine copy 2/cockpit-app/public/: index.html
promethea-engine copy 2/cockpit-app/src/: App.css  App.js  App.jsx
promethea-engine copy 2/cockpit-app/src/components/: AgentMemory.css  AgentMemory.jsx  Candlestick.js  ChaosVector.js  DataCube.js  EngineControls.css  EngineControls.jsx  LiveLogStream.css  LiveLogStream.jsx  MovingAverage.js  PortfolioChart.css  PortfolioChart.jsx  PortfolioSummary.css  PortfolioSummary.js  PortfolioSummary.jsx  PsychologyVector.js  ReflexivityVector.js  Sidebar.js  StateVector.js
promethea-engine copy 2/cockpit-app/src/utils/: manifest.js
promethea-engine copy 2/concepts/: agent_executor_concept.py
promethea-engine copy 2/go_excutor/: Dockerfile  go.mod
promethea-engine copy 2/mcp_servers/cot_mcp/: ai-plugin.json  core_logic.py  main.py  openapi.yaml
promethea-engine copy 2/mcp_servers/discourse_mcp/: ai-plugin.json  core_logic.py  main.py  openapi.yaml  requirements.txt
promethea-engine copy 2/mcp_servers/google_trends_mcp/: ai-plugin.json  core_logic.py  main.py  openapi.yaml  requirements.txt
promethea-engine copy 2/mcp_servers/options_data_mcp/: ai-plugin.json  core_logic.py  main.py  openapi.yaml  requirements.txt
promethea-engine copy 2/promethea/: models.py  utils.py
promethea-engine copy 2/promethea/providers/: cex_provider.py  cot_provider.py  discourse_provider.py  fred_provider.py  google_trends_provider.py  options_data_provider.py  rss_news_provider.py  sentiment_provider.py  web3_provider.py  yfinance_provider.py
promethea-engine copy 2/tests/fixtures/: f_disagg.txt
promethea-engine copy 2/tests/providers/: test_cot_provider.py  test_discourse_provider.py
promethea-engine copy 2/trading_agent/: Dockerfile  adversarial_agent.py  adversarial_environment.py  agent_model.pth  backfill.py  config.py  engine.py  events.py  export_data.py  main.py  requirements.txt  test_data_service.py  train.py  train_adversary.py  tune.py
promethea-engine copy 2/trading_agent/Services/: adapters.py  agent.py  agent.py.bak  analysis_service.py  api.py  api_handshake_service.py  data_providers.py  data_service.py  database.py  execution_service.py  inbound_event_service.py  log_broadcaster.py  mcp_client.py  pattern_recognition_service.py  portfolio_manager.py  scanner_service.py  trading_env.py  websocket_manager.py
promethea-engine copy 2/trading_agent/migrations/: env.py
promethea-engine copy 2/trading_agent/models/: promethea_world_model_v1.pth
(+148 files in other folders)
