module(
    name = "promethea",
    version = "1.0.0",
)

bazel_dep(name = "aspect_rules_js", version = "2.1.3")
bazel_dep(name = "aspect_rules_ts", version = "3.5.0")
bazel_dep(name = "rules_nodejs", version = "6.3.3")
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")

bazel_lib_host = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "host")
bazel_lib_host.host()
use_repo(bazel_lib_host, "aspect_bazel_lib_host")
register_toolchains("@aspect_bazel_lib_host//:all")

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
use_repo(bazel_lib_toolchains, "copy_to_directory_toolchains")

# Node.js toolchain setup
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.10.0")
use_repo(node, "nodejs_toolchains")

# npm setup
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

ts = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
ts.deps(
    name = "npm_typescript",
    ts_version = "5.5.4",
)
use_repo(ts, "npm_typescript")
